--- a/src/css/Major-project.css
+++ b/src/css/Major-project.css
@@ -253,7 +253,6 @@ p {
     width: 6rem;
     height: 6rem;
     background-size: 6rem 6rem;
-    /* border: 1px solid black; */
 }
 
 .cards-2 .fa-stack-1x {
@@ -929,47 +928,128 @@ summary {
     object-fit: cover !important;
 }
 
-/* @media only screen and (max-width: 1400px) {
+/* FOOTER CSS */
+.footer-section {
+    background-color: #113448;
+    padding-top: 5rem !important;
+    padding-bottom: 2rem !important;
+}
 
-    .form-call-me .callme-input form {
-        padding-left: 1.75rem;
-        padding-right: 3rem;
-    }
+.text-container-group {
+    display: flex !important;
+    flex-flow: row wrap !important;
+    justify-content: space-between !important;
+    align-items: baseline;
+}
 
-    .p-heading {
-        width: 40em !important;
-    }
-} */
+.footer-section h4 {
+    color: #fff;
+    margin-bottom: 0.75rem;
+    font: 700 1.25rem /1.625rem "Montserrat", sans-serif !important;
+}
 
-/* @media screen and (min-width: 480px) and (max-width:1024px) {
-    .about-section .about-divider {
-        display: grid;
-        grid-template-columns: repeat(1, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-    }
+.footer-section .text-box a {
+    text-decoration: underline;
+}
 
-    .about-section .about-divider .content-box,
-    .about-section .about-divider .image-box {
-        padding-right: 1.5rem !important;
-        padding-left: 1.5rem !important;
-        width: 100% !important;
-    }
+.footer-section .text-box p,
+.footer-section .text-box a,
+.copyright p {
+    color: #dfe5ec !important;
+    font: 400 1rem/1.5625rem "Open Sans", sans-serif !important;
+    font-size: 0.875rem !important;
+    line-height: 1.375rem !important;
+}
 
-    .member-group-parent {
-        display: flex;
-        flex-flow: row wrap;
-        justify-content: space-around;
-        margin-right: auto;
-        margin-left: auto;
-        margin-bottom: 1.5rem;
-    }
+.footer-section .text-box a {
+    display: block !important;
+}
 
-    .p-heading {
-        width: 85%;
-    }
-} */
+.copyright p {
+    text-align: center !important;
+}
+
+/* contact-section CSS*/
+.contact-section .sub-container {
+    width: 100%;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: center;
+}
+
+.contact-section .sub-container .contact-details {
+    width: 49% !important;
+    margin-bottom: 3rem !important;
+}
+
+.contact-section .sub-container .contact-input {
+    min-width: 48% !important;
+    display: flex;
+    flex-flow: column wrap;
+}
+
+.contact-section .sub-container .contact-input form {
+    display: flex;
+    flex-flow: column wrap !important;
+}
+
+.contact-section .contact-details .section-h3 {
+    margin-top: 2rem !important;
+    color: #484a46;
+    font: 700 1.375rem/1.75rem "Montserrat", sans-serif !important;
+}
+
+.contact-section .contact-details .stack-md .fa-stack {
+    display: inline-block;
+    line-height: 3em;
+    position: relative;
+    vertical-align: middle;
+    margin-right: 0.25rem;
+    margin-bottom: 0.75rem;
+    margin-left: 0.125rem;
+    width: 3.25rem;
+    height: 3.25rem;
+}
+
+.contact-section .contact-details .stack-md .hexagon {
+    width: 3.25rem !important;
+    height: 3.25rem !important;
+    background-size: 3.25rem 3.25rem !important;
+}
+
+.contact-section .contact-details .stack-md .fa-stack-1x {
+    font-size: 1.5rem;
+    line-height: 3.25rem;
+}
+
+.fa-stack:hover .hexagon {
+    background: url(../images/hexagon-white.svg) center center no-repeat !important;
+
+}
+
+.fa-stack:hover .fa-stack-1x {
+    background-color: transparent !important;
+    color: #14bf98 !important;
+    cursor: pointer !important;
+}
 
 @media screen and (max-width: 479px) {
+
+    .contact-section .sub-container .contact-details {
+        width: 100% !important;
+        margin-bottom: 3rem !important;
+    }
+
+    .contact-section .sub-container .contact-input {
+        min-width: 100% !important;
+        display: flex;
+        flex-flow: column wrap;
+    }
+
+    .footer-section .text-box {
+        width: 100% !important;
+        margin-bottom: 1.5rem !important;
+    }
 
     .about-section .item-2-parent {
         display: flex;
@@ -986,12 +1066,6 @@ summary {
 
     .about-section {
         width: 100vw;
-        border: 2px solid red;
-    }
-
-    .about-section .container {
-        /* width: 95%; */
-        border: 2px dotted violet;
     }
 
     .about-section .about-divider {
@@ -1117,7 +1191,7 @@ summary {
 
 
     .container {
-        width: 95vw !important;
+        width: 98vw !important;
     }
 
     .header-content {
