--- a/src/css/Major-project.css
+++ b/src/css/Major-project.css
@@ -5,6 +5,20 @@
 * Browsers: last 4 version
 */
 
+html {
+    scroll-behavior: smooth;
+    overflow-y: auto;
+    overflow-x: hidden;
+    -ms-overflow-style: none;
+    /* Internet Explorer 10+ */
+    scrollbar-width: none;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+    /* Safari and Chrome */
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -611,10 +625,10 @@ summary {
     display: flex;
     overflow-x: auto;
     overflow-y: hidden;
-    white-space: nowrap !important;
     -ms-overflow-style: none;
     /* Internet Explorer 10+ */
     scrollbar-width: none;
+    white-space: nowrap !important;
 }
 
 .testimonials .container .parent::-webkit-scrollbar {
